test/ppx_repr/deriver/errors/unsupported_tuple_size.ml
type t = unit * unit * unit * unit [@@deriving repr]
