test/ppx_repr/deriver/errors/unsupported_tuple_size.expected
File "unsupported_tuple_size.ml", line 1, characters 0-59:
Error: ppx_repr: tuple types must have 2, 3 or 4 components. Found 5.
